# vdirsyncer-rs

./: .build.yml  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
davcli/: Cargo.toml  README.md  build.rs
davcli/src/: caldav.rs  carddav.rs  cli.rs  main.rs
libdav/: Cargo.toml  README.md
libdav/examples/: find_addressbooks.rs  find_calendars.rs
libdav/src/: auth.rs  builder.rs  caldav.rs  carddav.rs  common.rs  dav.rs  dns.rs  lib.rs  names.rs  xml.rs  xmlutils.rs
libdav/tests/: caldav.rs
live_tests/: Cargo.toml  README.md  baikal.profile  radicale.profile  xandikos.profile
live_tests/src/: caldav.rs  carddav.rs  main.rs
vcaldav/: Cargo.toml
vcaldav/examples/: find_calendars.rs
vcaldav/src/: dav.rs  dns.rs  lib.rs  xml.rs
vdirsyncer/: Cargo.toml
vdirsyncer/src/: main.rs
vstorage/: Cargo.toml
vstorage/examples/: dump_caldav_storage.rs  webcal_to_vdir.rs
vstorage/src/: base.rs  caldav.rs  carddav.rs  filesystem.rs  lib.rs  readonly.rs  simple_component.rs  sync.rs  util.rs  webcal.rs
vstorage/src/sync/: pair.rs  plan.rs
vstorage/tests/: test_sync.rs
