[package]
name = "libdav"
version = "0.1.1"
authors = ["Hugo Osvaldo Barrera <hugo@whynothugo.nl>"]
edition = "2021"
description = "CalDav and CardDav client implementations."
homepage = "https://sr.ht/~whynothugo/vdirsyncer-rs/"
repository = "https://git.sr.ht/~whynothugo/vdirsyncer-rs"
license = "EUPL-1.2"
keywords = ["caldav", "carddav", "webcal", "calendar", "contacts"]

[dependencies]
async-trait = "0.1.66"
base64 = "0.21.0"
domain = { version = "0.7.2", features = ["resolv"] }
email_address = { version = "0.2.4", default-features = false }
http = "0.2.9"
hyper = { version = "0.14.24", features = ["http1", "client"] }
hyper-rustls = "0.23.2"
log = "0.4.17"
quick-xml = { version = "0.27.0" }
roxmltree = { version = "0.18.0", git = "https://github.com/RazrFalcon/roxmltree.git" }
thiserror = "1.0.38"

[dev-dependencies]
tokio = "1.25.0"
