# Copyright 2023 Hugo Osvaldo Barrera
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "live_tests"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
http = "0.2.9"
log = "0.4.17"
libdav = { version = "0.1.0", path = "../libdav" }
rand = "0.8.5"
tokio = "1.25.0"
simple_logger = { version = "2.3.0", default-features = false, features = ["colors"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
strum = { version = "0.24", features = ["derive"] }
