[package]
name = "vcaldav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { version = "0.7.1", features = ["resolv"], git= "https://github.com/NLnetLabs/domain.git", branch= "series-0.7" }
quick-xml = { version = "0.27.0" }
reqwest = "0.11.14"
thiserror = "1.0.38"
tokio = "1.25.0"
url = "2.2.2"
