[package]
name = "vdirsyncer"
version = "0.0.1"
edition = "2021"
license = " MPL-2.0"
description = "Synchronize calendars and contacts"
homepage = "https://github.com/pimutils/vdirsyncer/issues/946"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
