# Copyright 2023 Hugo Osvaldo Barrera
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "vdirsyncer"
version = "0.0.1"
edition = "2021"
description = "Synchronize calendars and contacts"
homepage = "https://github.com/pimutils/vdirsyncer/issues/946"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
