[package]
name = "vstorage"
version = "0.1.0"
authors = ["Hugo Osvaldo Barrera <hugo@whynothugo.nl>"]
edition = "2021"
description = "A common API for various icalendar/vcard storages."
readme = "README.md"
homepage = "https://github.com/pimutils/vdirsyncer/issues/946"
keywords = ["vdir", "filesystem", "icalendar", "caldav"]
# TODO: license = " MPL-2.0" ?

[dependencies]
sha2 = "0.10.2"
# TODO: Maybe use camino for UTF8 paths??
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
thiserror = "1.0.37"
tokio-stream = { version = "0.1.11", default-features = false, features = ["fs"] }
async-trait = "0.1.64"
libdav = { version = "0.1.0", path = "../libdav" }
http = "0.2.9"
hyper = "0.14.24"
hyper-rustls = "0.23.2"
serde = { version = "1.0.162", features = ["derive"] }
itertools = "0.10.5"

[dev-dependencies]
tempfile = "3.3.0"
